...

  return hasLoaded ? (
    <AccentColorProvider color={accentColor}>
      <RNAnimated.View style={[animatedStyle, { zIndex: 500 }]}>
        <Animated.View style={expandStyle}>
          <ContextMenuButton
            testID={onAvatarPressProfile ? undefined : 'avatar-button'}
            menuConfig={avatarContextMenuConfig}
            onPressMenuItem={handlePressMenuItem}
          >
            <ButtonPressAnimation onPress={onAvatarPressProfile} testID={onAvatarPressProfile ? 'avatar-button' : undefined}>
              <Box
                alignItems="center"
...
