...
  }, [enablePaste, getClipboard, onInvalidPaste, onPress]);

  return (
    deviceUtils.isIOS14 ? !hasClipboardData : clipboard && !isValid
  ) ? null : (
    // @ts-expect-error ts-migrate(17004) FIXME: Cannot use JSX unless the '--jsx' flag is provided... Remove this comment to see the full error message
    <ButtonPressAnimation onPress={handlePress} testID="paste-address-button">
      // @ts-expect-error ts-migrate(17004) FIXME: Cannot use JSX unless the
      '--jsx' flag is provided... Remove this comment to see the full error
      message
      <Text
        align="right"
        color={
...
