...
    navigate(Routes.RECEIVE_MODAL);
  };

  const { accentColor, loaded: accentColorLoaded } = useAccountAccentColor();

  return (
    <GenericCard type="stretch" disabled={!accentColorLoaded} testID="receive-card">
      <Stack space="36px">
        <Inline alignHorizontal="justify">
          <Stack space="16px">
            {accentColorLoaded ? (
              <Text size="22pt" weight="heavy" color="label">
                {i18n.t(TRANSLATIONS.receive_assets)}
...
        </Inline>
        {/* eslint-disable-next-line @typescript-eslint/ban-ts-comment */
        /* @ts-ignore - JS component */}
        <FloatingEmojis distance={250} duration={500} fadeOut={false} scaleTo={0} size={50} wiggleFactor={0}>
          {({ onNewEmoji }: { onNewEmoji: () => void }) => (
            <AccentColorProvider color={accentColor}>
              <TintButton onPress={() => onPressCopy(onNewEmoji)} height={36} loaded={accentColorLoaded} testID="copy-address-button">
                {`􀐅 ${i18n.t(TRANSLATIONS.copy_address)}`}
              </TintButton>
            </AccentColorProvider>
          )}
        </FloatingEmojis>
      </Stack>
...
