...
    }, 20000);
  }, [loadedChart]);

  const { f2c_enabled: addCashEnabled } = useRemoteConfig();

  return (
    <GenericCard onPress={Platform.OS === 'ios' ? handleAssetPress : handlePressBuy} type={cardType} testID="eth-card">
      <Stack space={{ custom: 41 }}>
        <Stack space="12px">
          <Bleed top="4px">
            <Inline alignVertical="center" alignHorizontal="justify">
              <Inline alignVertical="center" space="6px">
                {!loadedPrice ? (
...
