appId: ${APP_ID}
tags:
  - home
  - parallel
---
- launchApp:
    clearState: true
    clearKeychain: true
    arguments:
      isE2ETest: true
- runFlow: ../../utils/Prepare.yaml
- runFlow: ../../utils/ImportWalletWithKey.yaml
- assertVisible:
    id: avatar-button
- assertVisible:
    id: buy-button
- assertVisible:
    id: swap-button
- assertVisible:
    id: send-button
- assertVisible:
    id: receive-button
- tapOn:
    id: swap-button
- assertVisible:
    id: swap-screen
- swipe:
    direction: DOWN
# maestro can't interact with toasts, so copying address to clipboard
# here to paste in the send screen as a validation
- tapOn:
    id: receive-button
- tapOn:
    id: send-button
- assertVisible:
    id: send-asset-form-field
- tapOn:
    id: paste-address-button
- assertVisible:
    text: 'Test Wallet'
